[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eval_ad45335_dac"
version = "1.0"
description = "Project initialized by h2pcontrol cli"
authors = [{ name = "Tijmen Hilgenkamp", email = "t.j.hilgenkamp@student.vu.nl" }]
requires-python = ">=3.7"
